--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="container">
             <a href="index.html" class="nav-logo">
                 <i class="fas fa-feather-alt"></i>
-                <span>Sufyan Khalid</span>
+                <span>Brand Voiced</span>
             </a>
             <div class="nav-links">
                 <a href="index.html" class="active">Home</a>
