--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
         <div class="container">
             <a href="index.html" class="nav-logo">
                 <i class="fas fa-feather-alt"></i>
-                <span>Sufyan Khalid</span>
+                <span>Brand Voiced</span>
             </a>
             <div class="nav-links">
                 <a href="index.html">Home</a>
