--- a/index.html
+++ b/index.html
@@ -133,8 +133,8 @@
                 <div class="intro-content">
                     <span class="greeting">Hey there! <span class="wave">👋</span></span>
                     <h1 class="typewriter">I'm Sufyan Khalid</h1>
-                    <div class="title-tag">LinkedIn ghostwriter | Content strategist | Copywriter</div>
-                    <p class="bio">I help founders and executives build influence, attract opportunities, and close deals through strategic LinkedIn content. Think of me as your personal content alchemist — turning your expertise into content gold.</p>
+                    <div class="title-tag">Cut Through the Noise. Own LinkedIn With Your True Voice.</div>
+                    <p class="bio">Human-crafted LinkedIn ghostwriting for Founders, Executives and Brands who want to be heard, trusted, and followed—without sounding like everyone else.</p>
                     <div class="cta-buttons">
                         <a href="contact.html" class="nav-cta">Book a Free Strategy Call</a>
                         <a href="services.html" class="secondary-btn" style="background-color: #222; color: #fff; border: 1px solid #222;">View Services</a>
