--- a/index.html
+++ b/index.html
@@ -229,6 +229,50 @@
         </div>
     </section>
 
+  <!-- Testimonials -->
+            <div class="cs-testimonials">
+                <h2 class="cs-section-title" data-aos="fade-up">What Clients Say</h2>
+                <div class="cs-title-accent">
+                    <span class="cs-ink-line"></span>
+                    <i class="fas fa-feather"></i>
+                </div>
+                <div class="cs-testimonial-grid">
+                    <div class="cs-testimonial" data-aos="fade-up">
+                        <div class="cs-quote-icon">
+                            <i class="fas fa-quote-left"></i>
+                        </div>
+                        <div class="cs-testimonial-text">
+                            "Sufyan helped me triple my engagement and finally get noticed by the right audience. I'm now closing consulting clients who found me through my posts."
+                        </div>
+                        <div class="cs-testimonial-author">
+                            <img src="assets/profile pic.jpg" alt="Mark">
+                            <div class="cs-author-info">
+                                <h4>Mark</h4>
+                                <p>Leadership Coach</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="cs-testimonial" data-aos="fade-up">
+                        <div class="cs-quote-icon">
+                            <i class="fas fa-quote-left"></i>
+                        </div>
+                        <div class="cs-testimonial-text">
+                            "Got 25+ inbound leads in just a few months thanks to Sufyan's content strategy. Best investment I made this year."
+                        </div>
+                        <div class="cs-testimonial-author">
+                            <img src="assets/profile pic.jpg" alt="Rob">
+                            <div class="cs-author-info">
+                                <h4>Rob</h4>
+                                <p>Real Estate Consultant</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
     <!-- Call to Action -->
     <section class="cta-section-full">
         <div class="container">
