--- a/index.html
+++ b/index.html
@@ -272,6 +272,52 @@
         </div>
     </section>
 
+ <!-- Credentials Section -->
+    <section class="credentials-section">
+        <div class="container">
+            <div class="credentials-header">
+                <div class="credentials-title">
+                    <h2>Why Work With Me</h2>
+                    <div class="credentials-underline"></div>
+                </div>
+            </div>
+            <div class="credentials-grid">
+                <div class="credentials-item">
+                    <div class="credentials-icon">
+                        <i class="fas fa-clock"></i>
+                    </div>
+                    <h3>3+ Years Experience</h3>
+                    <p>Writing high-converting content that builds trust and drives action</p>
+                    <div class="ink-line"></div>
+                </div>
+                <div class="credentials-item">
+                    <div class="credentials-icon">
+                        <i class="fas fa-brain"></i>
+                    </div>
+                    <h3>Deep Psychology</h3>
+                    <p>Understanding of buyer psychology and what makes people engage</p>
+                    <div class="ink-line"></div>
+                </div>
+                <div class="credentials-item">
+                    <div class="credentials-icon">
+                        <i class="fas fa-microphone-alt"></i>
+                    </div>
+                    <h3>Voice Capture</h3>
+                    <p>Proven process to capture and maintain your authentic voice</p>
+                    <div class="ink-line"></div>
+                </div>
+                <div class="credentials-item">
+                    <div class="credentials-icon">
+                        <i class="fas fa-pen-fancy"></i>
+                    </div>
+                    <h3>Flexible Tone</h3>
+                    <p>From corporate pro to casual creator — adapting to your style</p>
+                    <div class="ink-line"></div>
+                </div>
+            </div>
+        </div>
+    </section>
+
 
     <!-- Call to Action -->
     <section class="cta-section-full">
