--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About - Sufyan Khalid</title>
+    <title>About - Brand Voiced</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&family=Lora:wght@400;500;600&display=swap" rel="stylesheet">
@@ -20,9 +20,9 @@
             <div class="nav-links">
                 <a href="index.html">Home</a>
                 <a href="about.html" class="active">About</a>
+                <a href="packages-and-pricing.html">Packages & Pricing</a>
                 <a href="case-studies.html">Case Studies</a>
-                <a href="services.html">Services</a>
-                <a href="contact.html" class="nav-cta">Let's Talk</a>
+                <a href="contact.html">Contact</a>
             </div>
             <button class="mobile-menu-btn">
                 <span></span>
