--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sufyan Khalid - LinkedIn Ghostwriter & Content Strategist</title>
+    <title>Brand Voiced - LinkedIn Ghostwriter & Content Strategist</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&family=Lora:wght@400;500;600&display=swap" rel="stylesheet">
@@ -19,9 +19,9 @@
             <div class="nav-links">
                 <a href="index.html" class="active">Home</a>
                 <a href="about.html">About</a>
+                <a href="packages-and-pricing.html">Packages & Pricing</a>
                 <a href="case-studies.html">Case Studies</a>
-                <a href="services.html">Services</a>
-                <a href="contact.html" class="nav-cta">Let's Talk</a>
+                <a href="contact.html">Contact</a>
             </div>
             <button class="mobile-menu-btn">
                 <span></span>
@@ -39,7 +39,7 @@
                     <div class="card-inner">
                         <div class="card-front">
                             <div class="profile-image">
-                                <img src="assets/profile pic.jpg" alt="Sufyan Khalid">
+                                <img src="assets/profile pic.jpg" alt="Brand Voiced">
                             </div>
                             <p class="profile-title">LinkedIn Ghostwriter & Content Strategist</p>
                             <p class="tagline">"Crafting Stories that Convert"</p>
@@ -120,7 +120,7 @@
                 <!-- Mobile Profile Section -->
                 <div class="mobile-profile-section">
                     <div class="mobile-profile-image">
-                        <img src="assets/profile pic.jpg" alt="Sufyan Khalid">
+                        <img src="assets/profile pic.jpg" alt="Brand Voiced">
                     </div>
                     <div class="mobile-social-links">
                         <a href="https://linkedin.com/in/sufyankhalid" target="_blank"><i class="fab fa-linkedin"></i></a>
@@ -134,10 +134,13 @@
                     <span class="greeting">Hey there! <span class="wave">👋</span></span>
                     <h1 class="typewriter">I'm Sufyan Khalid</h1>
                     <div class="title-tag">Cut Through the Noise. Own LinkedIn With Your True Voice.</div>
-                    <p class="bio">Human-crafted LinkedIn ghostwriting for Founders, Executives and Brands who want to be heard, trusted, and followed—without sounding like everyone else.</p>
+                    <p class="bio">Human-crafted LinkedIn ghostwriting for Founders, Executives
+                        and Brands who want to be heard, trusted, and followed without
+                        sounding like everyone else
+                        </p>
                     <div class="cta-buttons">
                         <a href="contact.html" class="nav-cta">Book a Free Strategy Call</a>
-                        <a href="services.html" class="secondary-btn" style="background-color: #222; color: #fff; border: 1px solid #222;">View Services</a>
+                        <a href="packages-and-pricing.html" class="secondary-btn" style="background-color: #222; color: #fff; border: 1px solid #222;">View Packages & Pricing</a>
                     </div>
                 </div>
             </div>
@@ -228,51 +231,8 @@
             </div>
         </div>
     </section>
-
-  <!-- Testimonials -->
-            <div class="cs-testimonials">
-                <h2 class="cs-section-title" data-aos="fade-up">What Clients Say</h2>
-                <div class="cs-title-accent">
-                    <span class="cs-ink-line"></span>
-                    <i class="fas fa-feather"></i>
-                </div>
-                <div class="cs-testimonial-grid">
-                    <div class="cs-testimonial" data-aos="fade-up">
-                        <div class="cs-quote-icon">
-                            <i class="fas fa-quote-left"></i>
-                        </div>
-                        <div class="cs-testimonial-text">
-                            "Sufyan helped me triple my engagement and finally get noticed by the right audience. I'm now closing consulting clients who found me through my posts."
-                        </div>
-                        <div class="cs-testimonial-author">
-                            <img src="assets/profile pic.jpg" alt="Mark">
-                            <div class="cs-author-info">
-                                <h4>Mark</h4>
-                                <p>Leadership Coach</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="cs-testimonial" data-aos="fade-up">
-                        <div class="cs-quote-icon">
-                            <i class="fas fa-quote-left"></i>
-                        </div>
-                        <div class="cs-testimonial-text">
-                            "Got 25+ inbound leads in just a few months thanks to Sufyan's content strategy. Best investment I made this year."
-                        </div>
-                        <div class="cs-testimonial-author">
-                            <img src="assets/profile pic.jpg" alt="Rob">
-                            <div class="cs-author-info">
-                                <h4>Rob</h4>
-                                <p>Real Estate Consultant</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
- <!-- Credentials Section -->
+    
+    <!-- Credentials Section -->
     <section class="credentials-section">
         <div class="container">
             <div class="credentials-header">
@@ -318,27 +278,108 @@
         </div>
     </section>
 
-
-    <!-- Call to Action -->
-    <section class="cta-section-full">
+       <!-- Case Studies Grid -->
+       <section class="cs-showcase">
         <div class="container">
-            <div class="cta-content">
-                <h2>Ready to Transform Your LinkedIn Presence?</h2>
-                <p>Let's work together to build your authority and attract your ideal clients.</p>
-                <div class="cta-buttons">
-                    <a href="contact.html" class="nav-cta">Book Your Free Strategy Call</a>
-                    <a href="services.html" class="secondary-btn">Explore Services</a>
+            <!-- Case Study 1 -->
+            <div class="cs-card" data-aos="fade-up">
+                <div class="cs-card-header">
+                    <div class="cs-icon-wrapper">
+                        <i class="fas fa-crown"></i>
+                    </div>
+                    <h3>Mark – Building Thought Leadership in Leadership</h3>
+                </div>
+                <div class="cs-content">
+                    <div class="cs-section">
+                        <h4><i class="fas fa-flag"></i> Challenge</h4>
+                        <p>Mark, a leadership coach targeting early-stage leaders, wanted to establish authority on LinkedIn. His content wasn't reaching the right audience, and his engagement was stuck at 1.5K impressions per post.</p>
+                    </div>
+                    <div class="cs-section">
+                        <h4><i class="fas fa-lightbulb"></i> Solution</h4>
+                        <p>We crafted a 3-post-per-week strategy focused on actionable leadership insights, paired with an engagement plan to boost reach. Each post combined personal stories with practical takeaways.</p>
+                    </div>
+                    <div class="cs-section">
+                        <h4><i class="fas fa-chart-line"></i> Results (3 Months)</h4>
+                        <div class="cs-metrics">
+                            <div class="cs-metric">
+                                <span class="cs-number">10K+</span>
+                                <span class="cs-label">Average Impressions</span>
+                            </div>
+                            <div class="cs-metric">
+                                <span class="cs-number">9%</span>
+                                <span class="cs-label">Engagement Rate</span>
+                            </div>
+                            <div class="cs-metric">
+                                <span class="cs-number">3x</span>
+                                <span class="cs-label">Follower Growth</span>
+                            </div>
+                        </div>
+                        <p class="cs-impact">Mark is now recognized in his niche and regularly receives speaking and consulting invites — many sparked by his content.</p>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="cta-decoration">
-            <div class="ink-splatter"></div>
-            <div class="quill-decoration">
-                <i class="fas fa-feather-alt"></i>
+
+            <!-- Case Study 2 -->
+            <div class="cs-card" data-aos="fade-up">
+                <div class="cs-card-header">
+                    <div class="cs-icon-wrapper">
+                        <i class="fas fa-building"></i>
+                    </div>
+                    <h3>Rob – Attracting Real Estate Clients via LinkedIn</h3>
+                </div>
+                <div class="cs-content">
+                    <div class="cs-section">
+                        <h4><i class="fas fa-flag"></i> Challenge</h4>
+                        <p>Rob, a real estate consultant, struggled to differentiate himself in a crowded market. His LinkedIn presence wasn't generating leads, despite his extensive industry experience.</p>
+                    </div>
+                    <div class="cs-section">
+                        <h4><i class="fas fa-lightbulb"></i> Solution</h4>
+                        <p>We developed a consistent content plan built on storytelling, market tips, and lead-driven CTAs. Each post was designed to showcase his expertise while providing actionable value.</p>
+                    </div>
+                    <div class="cs-section">
+                        <h4><i class="fas fa-chart-line"></i> Results (6 Months)</h4>
+                        <div class="cs-metrics">
+                            <div class="cs-metric">
+                                <span class="cs-number">300%</span>
+                                <span class="cs-label">Profile Visit Growth</span>
+                            </div>
+                            <div class="cs-metric">
+                                <span class="cs-number">15K+</span>
+                                <span class="cs-label">Monthly Views</span>
+                            </div>
+                            <div class="cs-metric">
+                                <span class="cs-number">25+</span>
+                                <span class="cs-label">Qualified Leads</span>
+                            </div>
+                        </div>
+                        <p class="cs-impact">Several of these leads converted into paying clients — all organically through his content.</p>
+                    </div>
+                </div>
+            </div>
+
+ 
+
+    <!-- About CTA Section -->
+    <section class="about-cta-section">
+        <div class="container">
+            <div class="about-cta-wrapper">
+                <div class="about-cta-content">
+                    <h2>Ready to Show Up Like a Thought Leader?</h2>
+                    <p>Let's build your brand, one scroll-stopping post at a time.</p>
+                    <div class="about-cta-buttons">
+                        <a href="#" class="btn-primary">Book a Free Strategy Call</a>
+                        <a href="packages-and-pricing.html" class="btn-secondary">View Packages & Pricing</a>
+                    </div>
+                </div>
+                <div class="about-quill-accent">
+                    <i class="fas fa-feather-alt"></i>
+                </div>
             </div>
         </div>
     </section>
 
+
+    
     <!-- Footer -->
     <footer class="footer">
         <div class="footer-content">
@@ -365,7 +406,7 @@
                     <h4>Quick Links</h4>
                     <ul>
                         <li><a href="about.html">About</a></li>
-                        <li><a href="services.html">Services</a></li>
+                        <li><a href="packages-and-pricing.html">Packages & Pricing</a></li>
                         <li><a href="case-studies.html">Case Studies</a></li>
                         <li><a href="contact.html">Contact</a></li>
                     </ul>
