--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Privacy Policy - Sufyan Khalid</title>
+    <title>Privacy Policy - Brand Voiced</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&family=Lora:wght@400;500;600&display=swap" rel="stylesheet">
@@ -14,14 +14,14 @@
         <div class="container">
             <a href="index.html" class="nav-logo">
                 <i class="fas fa-feather-alt"></i>
-                <span>Sufyan Khalid</span>
+                <span>Brand Voiced</span>
             </a>
             <div class="nav-links">
                 <a href="index.html">Home</a>
                 <a href="about.html">About</a>
+                <a href="packages-and-pricing.html">Packages & Pricing</a>
                 <a href="case-studies.html">Case Studies</a>
-                <a href="services.html">Services</a>
-                <a href="contact.html" class="nav-cta">Let's Talk</a>
+                <a href="contact.html">Contact</a>
             </div>
             <button class="mobile-menu-btn">
                 <span></span>
@@ -47,7 +47,7 @@
 
                 <div class="policy-section">
                     <h2>1. Introduction</h2>
-                    <p>Welcome to Sufyan Khalid's website. This Privacy Policy explains how we collect, use, disclose, and safeguard your information when you visit our website or use our services.</p>
+                    <p>Welcome to Brand Voiced's website. This Privacy Policy explains how we collect, use, disclose, and safeguard your information when you visit our website or use our services.</p>
                 </div>
 
                 <div class="policy-section">
@@ -134,10 +134,10 @@
                 <div class="footer-col">
                     <h4>Services</h4>
                     <ul>
-                        <li><a href="#">LinkedIn Optimization</a></li>
-                        <li><a href="#">Content Strategy</a></li>
-                        <li><a href="#">Ghost Writing</a></li>
-                        <li><a href="#">Profile Enhancement</a></li>
+                        <li><a href="packages-and-pricing.html#linkedin-optimization">LinkedIn Optimization</a></li>
+                        <li><a href="packages-and-pricing.html#content-strategy">Content Strategy</a></li>
+                        <li><a href="packages-and-pricing.html#ghost-writing">Ghost Writing</a></li>
+                        <li><a href="packages-and-pricing.html#profile-enhancement">Profile Enhancement</a></li>
                     </ul>
                 </div>
                 
@@ -145,7 +145,7 @@
                     <h4>Quick Links</h4>
                     <ul>
                         <li><a href="about.html">About</a></li>
-                        <li><a href="services.html">Services</a></li>
+                        <li><a href="packages-and-pricing.html">Packages & Pricing</a></li>
                         <li><a href="case-studies.html">Case Studies</a></li>
                         <li><a href="contact.html">Contact</a></li>
                     </ul>
